force-app/main/default/objects/Case_Snapshot__c/Case_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Daily snapshot of open cases and cases that were closed the previous day</description>
    <label>Case Snapshot</label>
    <nameField>
        <label>Case Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>