force-app/main/default/objects/Case_Snapshot__c/fields/Closed_Cases__c.field-meta.xml
<CustomField>
    <fullName>Closed_Cases__c</fullName>
    <label>Closed Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>