force-app/main/default/objects/Case_Snapshot__c/fields/Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Open_Cases__c</fullName>
    <label>Open Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>