force-app/main/default/objects/Case_Snapshot__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <inlineHelpText>Owner of Case. For open Cases this is the user who is currently in charge, for closed cases it is the person in contact with the customer</inlineHelpText>
    <label>Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>