force-app/main/default/objects/Case_Snapshot__c/fields/Resolved_FAE__c.field-meta.xml
<CustomField>
    <fullName>Resolved_FAE__c</fullName>
    <label>Resolved FAE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>