force-app/main/default/objects/Case_Snapshot__c/fields/Resolved_HQ__c.field-meta.xml
<CustomField>
    <fullName>Resolved_HQ__c</fullName>
    <label>Resolved HQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>