force-app/main/default/objects/Case_Snapshot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Case status</inlineHelpText>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>