force-app/main/default/objects/Case_Snapshot__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Team the Case Owner belongs to, taken from User object</description>
    <inlineHelpText>Team the Case Owner belongs to, taken from User object</inlineHelpText>
    <label>Team</label>
    <length>30</length>
    <type>Text</type>
</CustomField>