force-app/main/default/objects/Case_Snapshot__c/fields/Team_OLD_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>Team_OLD_FORMULA__c</fullName>
    <formula>Case ( Owner__c, 
&quot;aile&quot;,&quot;FAE&quot;,
&quot;alel&quot;,&quot;FAE&quot;,
&quot;aweh&quot;,&quot;FAE&quot;,
&quot;ayan&quot;,&quot;FAE&quot;,
&quot;bcha&quot;,&quot;FAE&quot;,
&quot;dber&quot;,&quot;FAE&quot;,
&quot;dliu&quot;,&quot;FAE&quot;,
&quot;efud&quot;,&quot;FAE&quot;,
&quot;erei&quot;,&quot;FAE&quot;,
&quot;fsjo&quot;,&quot;FAE&quot;,
&quot;gchi&quot;,&quot;FAE&quot;,
&quot;ggua&quot;,&quot;FAE&quot;,
&quot;hlee&quot;,&quot;FAE&quot;,
&quot;hmac&quot;,&quot;FAE&quot;,
&quot;jpar&quot;,&quot;FAE&quot;,
&quot;jzho&quot;,&quot;FAE&quot;,
&quot;lche&quot;,&quot;FAE&quot;,
&quot;lima&quot;,&quot;FAE&quot;,
&quot;lsch&quot;,&quot;FAE&quot;,
&quot;lyan&quot;,&quot;FAE&quot;,
&quot;mcas&quot;,&quot;FAE&quot;,
&quot;mmen&quot;,&quot;FAE&quot;,
&quot;mras&quot;,&quot;FAE&quot;,
&quot;mtsa&quot;,&quot;FAE&quot;,
&quot;nshi&quot;,&quot;FAE&quot;,
&quot;pdig&quot;,&quot;FAE&quot;,
&quot;plop&quot;,&quot;FAE&quot;,
&quot;psan&quot;,&quot;FAE&quot;,
&quot;pyan&quot;,&quot;FAE&quot;,
&quot;rmcn&quot;,&quot;FAE&quot;,
&quot;skai&quot;,&quot;FAE&quot;,
&quot;soku&quot;,&quot;FAE&quot;,
&quot;thua&quot;,&quot;FAE&quot;,
&quot;trui&quot;,&quot;FAE&quot;,
&quot;tsha&quot;,&quot;FAE&quot;,
&quot;vche&quot;,&quot;FAE&quot;,
&quot;wshe&quot;,&quot;FAE&quot;,
&quot;yali&quot;,&quot;FAE&quot;,
&quot;yshc&quot;,&quot;FAE&quot;,

&quot;fmad&quot;,&quot;TM&quot;,
&quot;iwes&quot;,&quot;TM&quot;,
&quot;mlim&quot;,&quot;TM&quot;,

&quot;AE GNSS&quot;,&quot;AE GNSS&quot;,
&quot;byou&quot;,&quot;AE GNSS&quot;,
&quot;ffel&quot;,&quot;AE GNSS&quot;,
&quot;ghun&quot;,&quot;AE GNSS&quot;,
&quot;jfur&quot;,&quot;AE GNSS&quot;,
&quot;mdur&quot;,&quot;AE GNSS&quot;,
&quot;msul&quot;,&quot;AE GNSS&quot;,
&quot;pblu&quot;,&quot;AE GNSS&quot;,
&quot;phen&quot;,&quot;AE GNSS&quot;,
&quot;vkar&quot;,&quot;AE GNSS&quot;,
&quot;yzha&quot;,&quot;AE GNSS&quot;,

&quot;AE CEL&quot;,&quot;AE CEL&quot;,
&quot;acub&quot;,&quot;AE CEL&quot;,
&quot;bric&quot;,&quot;AE CEL&quot;,
&quot;clee&quot;,&quot;AE CEL&quot;,
&quot;fdil&quot;,&quot;AE CEL&quot;,
&quot;mace&quot;,&quot;AE CEL&quot;,
&quot;mrod&quot;,&quot;AE CEL&quot;,
&quot;msin&quot;,&quot;AE CEL&quot;,
&quot;sfal&quot;,&quot;AE CEL&quot;,
&quot;sgod&quot;,&quot;AE CEL&quot;,
&quot;sses&quot;,&quot;AE CEL&quot;,

&quot;AE SHO&quot;,&quot;AE SHO&quot;,
&quot;cmag&quot;,&quot;AE SHO&quot;,
&quot;fbro&quot;,&quot;AE SHO&quot;,
&quot;mhan&quot;,&quot;AE SHO&quot;,
&quot;mzes&quot;,&quot;AE SHO&quot;,
&quot;sbia&quot;,&quot;AE SHO&quot;,
&quot;shoe&quot;,&quot;AE SHO&quot;,

&quot;Quality&quot;,&quot;Quality&quot;,
&quot;asam&quot;,&quot;Quality&quot;,
&quot;cmor&quot;,&quot;Quality&quot;,
&quot;gdem&quot;,&quot;Quality&quot;,
&quot;gloe&quot;,&quot;Quality&quot;,
&quot;hayo&quot;,&quot;Quality&quot;,
&quot;jand&quot;,&quot;Quality&quot;,
&quot;jjek&quot;,&quot;Quality&quot;,
&quot;jpri&quot;,&quot;Quality&quot;,
&quot;mcam&quot;,&quot;Quality&quot;,
&quot;mnov&quot;,&quot;Quality&quot;,
&quot;pdub&quot;,&quot;Quality&quot;,
&quot;pvol&quot;,&quot;Quality&quot;,
&quot;seln&quot;,&quot;Quality&quot;,

&quot;Other&quot;)</formula>
    <inlineHelpText>Grouping of users</inlineHelpText>
    <label>Team OLD FORMULA</label>
    <type>Text</type>
</CustomField>