force-app/main/default/objects/Case_Snapshot__c/fields/uB_Office__c.field-meta.xml
<CustomField>
    <fullName>uB_Office__c</fullName>
    <inlineHelpText>uB Office of Account for which a Case was opened</inlineHelpText>
    <label>uB Office</label>
    <length>30</length>
    <type>Text</type>
</CustomField>